Add registration
