# app/Models/User.php
@@ -21,6 +21,8 @@ class User extends Authenticatable implements JWTSubject
         'name',
         'email',
         'password',
+        'phone',
+        'image'
     ];
 
     /**
@@ -55,7 +57,8 @@ class User extends Authenticatable implements JWTSubject
     {
         return [
             "email" => $this->email,
-            "name" => $this->name
+            "name" => $this->name,
+            "image" => $this->image
         ];
     }
 }
